Fix tab visibility bug by adding the missing .hidden class in CSS

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1380,3 +1380,8 @@ body {
     }
 }
 
+.hidden {
+    display: none !important;
+}
+
+
